--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Univeral JS application utilizing Hot Module Reloading, Server Side Rendering, Code Splitting with React, Redux, React Router 4 and a heroku like deploy setup with Dokku.",
   "main": "index.js",
   "scripts": {
-    "development": "NODE_PATH=./src NODE_ENV=development node ./src/server/server.babel.js",
+    "dev": "NODE_PATH=./src NODE_ENV=development node ./src/server/server.babel.js",
     "production": "NODE_PATH=./src NODE_ENV=production node ./src/server/server.babel.js",
     "build": "npm run build:client && npm run build:server",
     "build:server": "NODE_ENV=production webpack --config ./webpack/server.babel.js",
@@ -24,8 +24,8 @@
   "license": "MIT",
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
-    "autoprefixer": "^6.7.7",
-    "babel-loader": "^6.4.1",
+    "autoprefixer": "^8.0.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.23.0",
@@ -34,11 +34,11 @@
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.24.0",
     "css-loader": "^0.28.0",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "react-hot-loader": "^3.0.0-beta.6",
-    "style-loader": "^0.16.1",
-    "webpack": "^2.3.3",
-    "webpack-dev-middleware": "^1.10.1",
+    "style-loader": "^0.20.2",
+    "webpack": "^3.11.0",
+    "webpack-dev-middleware": "^2.0.6",
     "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
@@ -47,8 +47,9 @@
     "express": "^4.15.2",
     "history": "^4.6.1",
     "immutable": "^3.8.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-redux": "^5.0.3",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
