--- a/package.json
+++ b/package.json
@@ -33,9 +33,14 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.24.0",
+    "copy-webpack-plugin": "^4.4.2",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "node-sass": "^4.7.2",
+    "postcss-loader": "^2.1.1",
+    "postcss-modules": "^1.1.0",
     "react-hot-loader": "^3.0.0-beta.6",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
     "webpack": "^3.11.0",
     "webpack-dev-middleware": "^2.0.6",
